--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
                             </div>
                         </div>
 
+                        <!-- 数值变化显示 -->
+                        <div class="status-changes" id="status-changes-panel">
+                            <h3>状态变化</h3>
+                            <div id="status-changes-content" class="status-changes-content">
+                                <div class="no-changes">暂无状态变化</div>
+                            </div>
+                        </div>
+
                         <!-- 快捷命令 -->
                         <div class="quick-commands">
                             <h3>快捷命令</h3>
@@ -96,6 +104,7 @@
                                 <button class="command-btn" data-command="status">查看状态</button>
                                 <button class="command-btn" data-command="chars">查看角色</button>
                                 <button class="command-btn" data-command="env">查看环境</button>
+                <button class="command-btn" data-command="refresh-env">刷新环境</button>
                             </div>
                         </div>
 
